[package]
name = "yew-callbacks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create and manage callbacks per component easily"
include = ["src/**/*.rs", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.49"
proc-macro-error = "1.0.4"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[dev-dependencies]
yew = "0.20"
