[package]
name = "yew-callbacks"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Create and manage callbacks per component easily"
include = ["src/**/*.rs", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[lib]
proc-macro = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.49"
proc-macro-error = "1.0.4"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[dev-dependencies]
futures = "0.3"
gloo = "0.8"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
xtask-wasm = { version = "0.1.9", features = ["run-example"] }
yew = { version ="0.20", features = ["ssr", "csr"] }
